fix align right flag

--- a/static/styles.css
+++ b/static/styles.css
@@ -206,6 +206,6 @@ is-invalid {
     margin:auto;
 }
 
-.lang-flag {
+.right {
     text-align: right;
 }
